@@ -57,6 +57,8 @@ v0.9 [2016-]
             - remove "util_*()" shortcuts and use original "util.*()" methods
             - changed "log_handler()" to read the temporary logfile only once
             - replaced "set_logfilesize()" to heavy reduce calling "wx.wxFileSize()" method
+            - replaced protect_hub_values parameter list by short version and using notebook page enable
+            - replaced unprotect_hub_values parameter list by short version and using notebook page disable
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
